# ni43101-extractor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  README.md  TEST_REPORT.md  TIMELINE.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
agents/: __init__.py  critic_master.py  extractor_agent.py
core/: __init__.py  config.py  evolution_log.py  logging_config.py  path_utils.py  pdf_parser.py  revise_loop.py
docker/: Dockerfile
docs/: docker-usage.md
docs/superpowers/plans/: 2026-07-02-docker-compose-integration.md
eval/: __init__.py  ground_truth.json  metrics.py
tests/: __init__.py  conftest.py  test_critic.py  test_extractor.py  test_pdf_parser.py  test_revise_loop.py
