[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ni43101-extractor"
version = "0.1.0"
description = "自进化 NI 43-101 报告资源量提取系统"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ni43101", "mining", "extraction", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
ni43101-extract = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "eval*"]

# =============================
# Ruff 配置
# =============================
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["agents", "core", "eval"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (black handles this)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "core", "eval"]

# =============================
# Black 配置
# =============================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | \.mypy_cache
  | __pycache__
)/
'''

# =============================
# Pytest 配置
# =============================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=agents",
    "--cov=core",
    "--cov=eval",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

# =============================
# Mypy 配置
# =============================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pypdf.*",
]
ignore_missing_imports = true
